# Send

./: AppIcon.sketch  LICENSE.txt  README.md
.github/workflows/: issues.yml  release.yml  tests.yml
Send/: AppDelegate.h  AppDelegate.m  Credits.rtf  Info.plist  Localizable.xcstrings  Send.entitlements  main.m
Send Library/Class/: Send.h  Send.m
Send Library/Protocol/: SendUploadDelegate.h
Send Library/libffsend/: Cargo.toml
Send Library/libffsend/libffsend.xcodeproj/: project.pbxproj
Send Library/libffsend/src/: ffsend.h  lib.rs
Send Share/: Info.plist  Localizable.xcstrings  Send_Share.entitlements  icon.icns
Send Share/Base.lproj/: ShareViewController.xib
Send Share/Controllers/: ShareViewController.h  ShareViewController.m
Send Share/cs.lproj/: Localizable.strings  ShareViewController.strings
Send Share/mul.lproj/: ShareViewController.xcstrings
Send.xcodeproj/: project.pbxproj
Send/Base.lproj/: Main.storyboard
Send/Controllers/: FilesViewController.h  FilesViewController.m  SettingsViewController.h  SettingsViewController.m  UploadViewController.h  UploadViewController.m  WelcomeController.h  WelcomeController.m
Send/DockProgress/: DockProgress.h  DockProgress.m
Send/Model/: File.h  File.m
Send/Shared/: SettingsManager.h  SettingsManager.m
Send/Views/: DropView.h  DropView.m
Send/cs.lproj/: Localizable.strings  Main.strings
Send/en.lproj/: Localizable.strings
Send/mul.lproj/: Main.xcstrings
SendTests/: SendTests.m
SendUITests/: SendUITests.m  SendUITestsLaunchTests.m
dmg/: VolumeIcon.icns
libffsend/: Cargo.toml
(+45 files in other folders)
